<?php

namespace App\Models\PlanificacionAcademica;

use Illuminate\Database\Eloquent\Model;

class AsignacionDocente extends Model
{
    public $timestamps = false;
    protected $table = 'asignaciones_docente';
    protected $fillable = ['docente_id', 'grupo_id', 'materia_id'];

    public function docente()
    {
        return $this->belongsTo(Docente::class);
    }

    public function grupo()
    {
        return $this->belongsTo(Grupo::class);
    }

    public function materia()
    {
        return $this->belongsTo(Materia::class);
    }
}
