@startuml ModeloConceptual_CUP_FICCT
' Modelo Conceptual — FICCT_v2.sql
' Visualizar en: https://www.planttext.com/

hide circle
skinparam shadowing false
skinparam roundCorner 0
skinparam backgroundColor #FFFFFF
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam nodesep 30
skinparam ranksep 40

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  HeaderBackgroundColor #FFFFFF
  AttributeFontColor #000000
}

skinparam package {
  BackgroundColor #FFFFFF
  BorderColor #000000
  FontColor #000000
}

title Diagrama de Clases — Modelo Conceptual CUP-FICCT

' -----------------------------------------------------------------------------

class User {
  - id : Long
  - name : String
  - email : String
  - password : String
  - role : String
  - active : Boolean
  - intentosFallidos : Int
  - bloqueadoHasta : Date
  --
  + iniciarSesion() : Boolean
  + cerrarSesion() : void
  + validarCredenciales() : Boolean
  + bloquearCuenta() : void
}

class BitacoraAcceso {
  - id : Long
  - ipAddress : String
  - action : String
  - createdAt : Date
  --
  + registrarAcceso() : void
}

class Notificacion {
  - id : Long
  - tipoEvento : String
  - mensaje : Text
  - estado : String
  - fechaGeneracion : Date
  - fechaLectura : Date
  --
  + marcarComoLeida() : void
}

class GestionAcademica {
  - id : Long
  - codigo : String
  - activa : Boolean
  - fechaInicio : Date
  - fechaFin : Date
  - createdAt : Date
  --
  + estaVigente() : Boolean
  + activar() : void
}

class Carrera {
  - id : Long
  - nombre : String
  - codigo : String
}

class CupoGestion {
  - id : Long
  - cupoMaximo : Integer
  - cuposDisponibles : Integer
  - createdAt : Date
  --
  + verificarDisponibilidad() : Boolean
  + decrementarCupo() : void
}

class Admision {
  - id : Long
  - via : String
  - fechaAdmision : Date
  --
  + ejecutarAsignacion() : void
  + reasignarCarrera() : void
}

class Postulante {
  - id : Long
  - ci : String
  - nombres : String
  - apellidos : String
  - fechaNacimiento : Date
  - sexo : Char
  - direccion : String
  - ciudad : String
  - telefono : String
  - email : String
  - colegioProcedencia : String
  - tituloBachiller : String
  - turnoPreferencia : String
  - estado : String
  - recurrente : Boolean
  - createdAt : Date
  - updatedAt : Date
  --
  + registrar() : void
  + verificarRequisitos() : Boolean
  + detectarRecurrente() : Boolean
  + cambiarEstado() : void
}

class RequisitosDocumentales {
  - id : Long
  - ciDigitalizado : Boolean
  - certificadoNacimiento : Boolean
  - tituloBachillerLegalizado : Boolean
  - formularioPreinscripcion : Boolean
  - verificadoBdExterna : Boolean
  - updatedAt : Date
  --
  + estaCompleto() : Boolean
}

class Pago {
  - id : Long
  - monto : Decimal
  - estadoPago : String
  - stripeCheckoutId : String
  - fechaPago : Date
  --
  + confirmarPago() : void
  + verificarEstado() : String
}

class ConversacionChatbot {
  - id : Long
  - pregunta : Text
  - respuesta : Text
  - resuelta : Boolean
  - fecha : Date
  --
  + resolver() : void
}

class Aula {
  - id : Long
  - nombre : String
  - capacidad : Integer
  - ubicacion : String
}

class Grupo {
  - id : Long
  - numero : Integer
  - turno : String
  - createdAt : Date
  --
  + estaCompleto() : Boolean
  + agregarEstudiante() : void
  + calcularCantidadGrupos() : Integer
}

class AsignacionGrupo {
  - id : Long
  - createdAt : Date
  --
  + asignar() : void
}

class Materia {
  - id : Long
  - nombre : String
  - codigo : String
}

class Docente {
  - id : Long
  - ci : String
  - nombres : String
  - apellidos : String
  - especialidad : String
  - gradoAcademico : String
  - correo : String
  - telefono : String
  - fechaNacimiento : Date
  - estado : String
  - createdAt : Date
  --
  + getCargaHoraria() : Integer
  + puedeAsignarGrupo() : Boolean
}

class Especialidad {
  - id : Long
  - nombre : String
  - createdAt : Date
}

class AsignacionDocente {
  - id : Long
  - createdAt : Date
  --
  + asignar() : void
}

class HorarioGrupoMateria {
  - id : Long
  - diaSemana : Integer
  - horaInicio : Time
  - horaFin : Time
  - createdAt : Date
}

class PreguntaSimulacro {
  - id : Long
  - enunciado : Text
  - opciones : Text
  - respuestaCorrecta : String
  - createdAt : Date
}

class Examen {
  - id : Long
  - numeroExamen : Integer
  - nota : Decimal
  - createdAt : Date
  --
  + validarRangoNota() : Boolean
  + calcularNotaPonderada() : Decimal
}

class NotaFinal {
  - id : Long
  - promedio : Decimal
  - estado : String
  - observaciones : String
  - updatedAt : Date
  --
  + calcularPromedio() : Decimal
  + determinarEstado() : String
}

class AuditoriaNota {
  - id : Long
  - notaAnterior : Decimal
  - notaNueva : Decimal
  - motivo : Text
  - fechaModificacion : Date
  --
  + registrarCambio() : void
}

' --- Relaciones ---

User "1" -- "0..*" BitacoraAcceso : registra
User "1" -- "0..*" Notificacion : recibe
User "1" -- "0..1" Postulante : es
User "1" -- "0..1" Docente : es
User "1" -- "0..*" AuditoriaNota : modifica

GestionAcademica "1" -- "0..*" Postulante : convoca
GestionAcademica "1" -- "0..*" Grupo : organiza
GestionAcademica "1" -- "0..*" CupoGestion : define

Carrera "1" -- "0..*" CupoGestion : tiene
Carrera "1" -- "0..*" Admision : recibe
Carrera "1" -- "0..*" Postulante : primera opcion
Carrera "1" -- "0..*" Postulante : segunda opcion

Postulante "1" -- "1" RequisitosDocumentales : cumple
Postulante "1" -- "0..*" Pago : realiza
Postulante "1" -- "0..1" AsignacionGrupo : asignado en
Postulante "1" -- "0..1" Admision : admitido en
Postulante "1" -- "0..*" Examen : rinde
Postulante "1" -- "0..*" NotaFinal : obtiene
Postulante "1" -- "0..*" ConversacionChatbot : consulta

Aula "1" -- "0..*" Grupo : alberga
Grupo "1" -- "0..*" AsignacionGrupo : contiene
Grupo "1" -- "0..*" AsignacionDocente : requiere
Grupo "1" -- "0..*" HorarioGrupoMateria : programado

Docente "1" -- "0..*" AsignacionDocente : imparte
Docente "1" -- "0..*" Especialidad : declara
Materia "1" -- "0..*" Docente : area
Materia "1" -- "0..*" AsignacionDocente : dicta
Materia "1" -- "0..*" HorarioGrupoMateria : horario
Materia "1" -- "0..*" Especialidad : area
Materia "1" -- "0..*" Examen : evalua
Materia "1" -- "0..*" NotaFinal : resultados
Materia "1" -- "0..*" PreguntaSimulacro : banco

Examen "1" -- "0..*" AuditoriaNota : auditada

@enduml
